# agentops-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deep-research-report.md  pyproject.toml
app/: __init__.py  agent.py  document_qa.py  evaluation.py  memory.py  planner.py  schemas.py  settings.py
app/api/: __init__.py  routes.py
app/codebase/: __init__.py  overview.py  qa.py  reader.py  review.py  scanner.py  search.py  security.py  symbols.py
app/providers/: __init__.py  base.py  deepseek.py  factory.py  mock.py
app/tools/: __init__.py  base.py  markdown.py  mock.py  registry.py
app/web/: app.js  ask.html  eval.html  impact.html  index.html  overview.html  review.html  (+1 more)
docs/: 企业级代码仓库问答Agent设计.md  真实开源仓库分析-Novu.md  第10步-接入DeepSeek大模型Provider.md  第11步-用真实DeepSeek-Planner跑通API-Demo.md  第12步-模型输出修复重试与fallback.md  第13步-本地Markdown文档读取工具.md  第14步-文档问答最小RAG链路.md  第15步-记忆与会话状态.md  第16步-评测集与自动评测报告.md  第17步-前端Demo页面.md  第18步-部署简历材料与项目复盘.md  第1步-项目骨架与环境.md  第2步-FastAPI健康检查.md  第3步-Pydantic-Schema.md  第4步-Mock模型适配层.md  第5步-Planner最小实现.md  第6步-状态机主链路.md  第7步-基础Trace与API-Demo.md  第8步-工具层与Mock-Tool-Registry.md  第9步-工具调用失败处理与回归测试.md  简历项目描述.md  部署说明.md  项目复盘.md
evals/: cases.json  latest-report.md
scripts/: run_evals.py  verify_deepseek_planner.py
tests/: conftest.py  test_agent.py  test_codebase.py  test_deepseek_provider.py  test_document_qa.py  test_evaluation.py  test_health.py  test_markdown_tool.py  test_memory.py  test_planner.py  test_planner_recovery.py  test_project_artifacts.py  test_project_import.py  test_providers.py  test_schemas.py  test_settings.py  test_task_api.py  test_tool_failures.py  test_tools.py  test_web.py
